--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {"node": ">=8.0.0" }
   "author": "",
   "license": "ISC"
 }
