captured in a mobile view

--- a/config/default.yml
+++ b/config/default.yml
@@ -5,11 +5,13 @@ chrome:
       - --headless
       - --disable-gpu
       - --no-sandbox
-    chromePath: /home/hisakazu-fu/.usr/local/cad117/google-chrome-stable/opt/google/chrome/chrome
   device:
-    width: 320
-    height: 568
     deviceScaleFactor: 0
     mobile: true
     fitWindow: false
-
+# chrome developer toolsから取得
+device:
+  iphone6:
+    userAgent: "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1"
+    width: 375
+    height: 667
