--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "engines": {"node": ">=8.0.0" }
-  "author": "",
+  "engines": {
+    "node": ">=8.0.0"
+  },
   "license": "ISC"
 }
